[package]
name = "axum"
version = "0.1.0"
edition = "2021"
authors = ["伊欧 <langyo.china@gmail.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"

# log = "0.4"
# console_log = "^1"

worker = { version = "0.3.0", features = ['http', 'axum', "d1"] }
worker-macros = { version = "0.3.0", features = ['http'] }
axum = { version = "0.7", default-features = false, features = ["macros"] }
tower-service = "0.3.2"

console_error_panic_hook = { version = "0.1" }
wasm-bindgen-futures = { version = "0.4" }
oneshot = "0.1"

sea-orm = { version = "1.0.0-rc.7", default-features = false, features = [
    "macros",
    "proxy",
    "with-uuid",
    "with-chrono",
    "with-json",
    "debug-print",
] }
